bdr.BDR2.scala.error
Compilation error:
BDR2:4: error: not found: value message
  message match {
  ^BDR2:10: error: not found: type int
    case "C" => avance(3:int)
                         ^